pracaInz/force-app/main/default/objects/Product2/fields/English_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>English_Product_Name__c</fullName>
    <label>English Product Name</label>
    <type>TextArea</type>
</CustomField>