pracaInz/force-app/main/default/objects/Product2/fields/Polish_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Polish_Product_Name__c</fullName>
    <label>Polish Product Name</label>
    <type>TextArea</type>
</CustomField>