pracaInz/force-app/main/default/objects/Product2/fields/Short_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Short_Product_Name__c</fullName>
    <label>Short Product Name</label>
    <length>10</length>
    <type>Text</type>
</CustomField>